bk_ida/gobmkida/g0/owl_defend
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/engine/owl.c:2243:12: error: use of undeclared identifier 'owl_0'
init_owl( &owl_0, target, 0, 0, 1); 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/engine/owl.c:2244:19: error: use of undeclared identifier 'owl_0'
owl_make_domains( owl_0, 0LL); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/engine/owl.c:2245:28: error: use of undeclared identifier 'owl_0'
prepare_goal_list( target, owl_0, owl_goal_worm, &goal_worms_computed, kworm, 1); 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/engine/owl.c:2246:46: error: use of undeclared identifier 'owl_0'
result = do_owl_defend( target, &move, &wid, owl_0, 0, 0, 0); 
                                             ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/engine/owl.c:2269:1: error: use of undeclared identifier 'owl_0'
owl_0->goal, 
^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/owl_defend/src/obj/1/owl.o] Error 1
